--- a/less/homepage.less
+++ b/less/homepage.less
@@ -241,6 +241,7 @@ header {
       div {
         display: flex;
         justify-content: center;
+        height: auto;
         img {
           height: auto;
         }
